2009-04-07  Darin Adler  <darin@apple.com>

        Roll out incorrect build fix.

        * WebCore.NPAPI.exp: Reverted.

2009-04-07  Darin Adler  <darin@apple.com>

        Another build fix.

        * WebCore.NPAPI.exp: Added new functions.

2009-04-07  Anders Carlsson  <andersca@apple.com>

        Another build fix.
        
        * plugins/npfunctions.h:

2009-04-07  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed build fix. Fix non-Mac builds.

        * bridge/npapi.h:

2009-04-07  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt
        
        https://bugs.webkit.org/show_bug.cgi?id=25069
        
        Clean up the accelerated compositing code that determines the format of
        the GraphicsLayer hierarchy, being more explicit about which parts have
        to happen before and after descendant layers have been updated. Also remove
        some unhelpful caching of state.

        * dom/Document.cpp:
        (WebCore::Document::recalcStyle):
        Only call updateCompositingLayers() if we know we're not going to be
        doing a layout soon.
        
        * platform/graphics/mac/GraphicsLayerCA.mm:
        (WebCore::GraphicsLayerCA::setDrawsContent):
        Toggling drawsContent from false to true should do a setNeedsDisplay().
        
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::styleChanged):
        updateLayerCompositingState() no longer updates the layer geometry, so
        do that here if we're not going to rebuild layers anyway.
        Also, updateLayerCompositingState() no longer does a setContentsNeedDisplay,
        so do that if the style change indicates that a repaint is required.
        
        * rendering/RenderLayerBacking.h:
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::RenderLayerBacking):
        (WebCore::RenderLayerBacking::updateAfterLayout):